# goit-ds-hw-03

./: pyproject.toml
task_01/: create_db.py  main.py
task_02/: authors.json  main.py  quotes.json
